--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -144,107 +144,107 @@ stories:
   domain: http://www.dailytimes.com/
   link: https://www.valdostadailytimes.com/sports/national_sports/mitchell-s-big-nd-half-stymies-blazers-rally-in-jazz/image_7a433bcf-461d-528a-bd01-29faf25d7702.html
 images:
-- name: razorcliff-razorcliff-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-smoking-cigarette.jpg
-- name: oldcabin-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-rainbow-festival.jpg
-- name: status-berlin-status-berlin-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-creativity.jpg
-- name: copper-circuit-street-car-san-francisco.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-street-car-san-francisco.jpg
-- name: yosemite-yosemite-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-bright-sand.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
-- name: castle-wall-DSC-0067-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit.JPG
-- name: stories-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-blue-circuit-3.jpg
-- name: nazi-invasion-IMG_2971.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_2971.jpg
-- name: blossombar-crafty-painting-file-00-00-50-32.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-32.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-electricity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-electricity.JPG
-- name: old-church-oldchurch-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-plentiful.jpg
-- name: ellis-island-ellis-island-room-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-satan-red.jpg
-- name: mosaic-face-mosaic-face-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-china-prop.jpg
-- name: mistywoods-babyfoot-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-clean-view.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
-- name: stories-methuselah-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-methuselah-mountain.jpg
-- name: hollywood-building-hollywood-building-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-horiz-circuit.jpg
-- name: oldhousecars-house-old-cars-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-color.jpg
-- name: border-crossing-bordercrossing-colorful-dream.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-dream.png
-- name: braceros-domingo-ulloa-stairs-down-blue-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-stairs-down-blue-green.jpg
-- name: hollywood-building-hollywood-building-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-smoking-cigarette.jpg
-- name: copper-circuit-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-grain-ship-docking-grass.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-- name: old-school-house-old-schoolhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-green-zuma.jpg
-- name: crow_dark_soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_soul.jpg
-- name: beach-rocks-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
-- name: powerlines-power-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purple-storm.jpg
-- name: stories-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit.png
-- name: gypsy-wagon-gypsywagon-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-granite.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-- name: nazi-invasion-IMG_4430.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4430.jpg
-- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
-- name: beach-rocks-beach-rocks-currents-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-space-pizza.jpg
-- name: stalin-time-statue-playing-instrument.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-playing-instrument.jpg
-- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-- name: flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-- name: downtown-los-angeles-downtown-la-bright-sand.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-bright-sand.JPG
-- name: downtown-trucksilo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-dali.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
-- name: old-door-lock-old-door-lock-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit.jpg
-- name: old-barn-old-barn-1500-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-smoking-cigarette.jpg
-- name: copper-circuit-high-speed-train-station-france.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-high-speed-train-station-france.jpg
-- name: braceros-domingo-ulloa-downtown-la_36349151230_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-la_36349151230_o.jpg
-- name: store-on-corner-oldcabin-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-smoking-cigarette.jpg
-- name: old-house-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
-- name: school-clouds-church-clouds-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-attack-planes.jpg
-- name: store-on-corner-oldcabin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purp-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-internet-numbers.jpg
-- name: la-muse-downtown-berlin-crowds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-berlin-crowds.jpg
+- name: stalin-time-boats-waterfront-bristol.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-boats-waterfront-bristol.jpg
+- name: fence-mexico-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-atari-asteroids.jpg
+- name: yosemite-yosemite-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
+- name: curtain-curtain-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-rainbow-festival.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-nazi-poster.jpg
+- name: locked-up-steam-lock-up-steam-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-soul.jpg
+- name: braceros-domingo-ulloa-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-construction-crane-city.jpg
+- name: oldhouse-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-dream.jpg
+- name: stalin-time-old-train-on-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-train-on-tracks.jpg
+- name: la-muse-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-125thstreet.jpg
+- name: wind-mills-windmills-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
+- name: ellis-island-ellisisland-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-paper.jpg
+- name: udnie-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8486.jpg
+- name: hollywood-building-hollywood-building-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
+- name: stalin-time-palace-water-fountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-palace-water-fountain.jpg
+- name: copper-circuit-castle-window_35928999923_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-window_35928999923_o.jpg
+- name: mistywoods-babyfoot-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sand-paper.jpg
+- name: copper-circuit-old-church-in-field.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-church-in-field.jpg
+- name: old-cabin-oldcabin-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sunday.jpg
+- name: nazi-invasion-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-firetruck-bright-sun.jpg
+- name: fence-mexico-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-oily-mcoilface.jpg
+- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-two.jpg
+- name: nazi-invasion-berline-wall-old-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-berline-wall-old-building.jpg
+- name: aws-s3-stories-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: meadowbutterfly-meadow-butterfly-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gred-mash.jpg
+- name: lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
+- name: nazi-invasion-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
+- name: fence-bw-fist-dark-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-dark-dali.png
+- name: status-berlin-status-berlin-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-light-dali.jpg
+- name: braceros-domingo-ulloa-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-building-trees-sky.jpg
+- name: machine-road-machine-road-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-plentiful.jpg
+- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
+- name: bf-skinner-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-lawn-view.jpg
+- name: white-house-lawn-white-house-lawn-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-nazi-poster.jpg
+- name: stalin-time-statue-of-liberty-back.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty-back.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-1200.jpg
+- name: bf-skinner-pigeons-do-not-feed-them.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-pigeons-do-not-feed-them.jpg
+- name: curtain-curtain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dry-skin.jpg
+- name: store-on-corner-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
+- name: nazi-invasion-times-square-up-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-times-square-up-road.jpg
+- name: christianity-christianity-under-construction-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dry-skin.jpg
 - name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
+- name: oldroad-old-road-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
+- name: berlinwall-DSC-0084-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-wols.jpg
+- name: abandonedbuildings_blue_brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_brush.jpg
+- name: server-cloud-server-racks-door-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-collage.jpg
 ---
 Three Vehicle Accident East Of Lexington Results In Fatality.&nbsp;Walking Across America For Veteran Awareness.&nbsp;Indians Lose To Dogs.&nbsp;New Film Explores The Life Of Linda Ronstadt.&nbsp;Christmas For The Fishes.&nbsp;Oak Mitsui Selling Camden Facility To Nippon Denkai.&nbsp;Slave Cemetery Poses Questions For Florida Country Club.&nbsp;Police Release Teen Suspect In Barnard Students Killing.&nbsp;
